welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: not found: value buggle
buggle=estFaceMur()
^Program:2: error: not found: value buggle
if (buggle==true ){
    ^