welcome.lessons.welcome.conditions.Conditions.scala.code
buggle=estFaceMur()
if (buggle==true ){
  recule();
} else {
  avance();
}